# CPP_Messenger

./: .gitignore  CHANGELOG  README.md
materials/: README.md  database.sql  forVKteam.md  notes.md
messenger/src/: .gitignore  CMakeLists.txt  Makefile  main.cpp  messengerbase.cpp  messengerbase.h  types.h
messenger/src/build-client-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.cmake/api/v1/reply/: codemodel-v2-4e3919e06e5940f98b71.json  index-2023-05-09T23-22-27-0262.json  target-messengerClient-Debug-4d2d04f4f5f1e297f862.json  target-messengerClientTarget-Debug-8dadf86246af7dfab3cb.json
messenger/src/build-client-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-d0af221b5160dd112c09.json  cmakeFiles-v1-6e4d7c0b7829254b980e.json  codemodel-v2-05041b7169759968694f.json  directory-.-Debug-47362386d95624882336.json  index-2023-05-09T22-05-52-0407.json  target-messengerClient-Debug-3fcee251f1f1bc744f88.json  target-messengerClientTarget-Debug-aa2db99afa17c42d13ab.json  target-messengerClientTarget_autogen-Debug-dd8352fd46c906295a61.json  target-messengerClientTarget_autogen_timestamp_deps-Debug-e43aa2bbdb705aa0d6d7.json  target-messengerClient_autogen-Debug-0c004072536ae32f4fa2.json  target-messengerClient_autogen_timestamp_deps-Debug-d15d355d6934d3c91ffa.json
messenger/src/build-client-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/.cache/clangd/index/: authorization_view.cc.35D36F3630F33EC7.idx  client_view.cc.9D63EBF4A14EC822.idx  main.cc.40FDA571C9155553.idx  messenger_view.cc.2346ABD6D7D8AA45.idx
messenger/src/client/: CMakeLists.txt  authorization.cc  authorization.h  authorization_view.cc  authorization_view.cpp  authorization_view.h  client.cc  client.h  client_data.h  client_view.cc  client_view.cpp  client_view.h  main.cc  main.cpp  messenger.cc  messenger.h  messenger_controller.cpp  messenger_controller.h  messenger_view.cc  messenger_view.cpp  messenger_view.h  messengerbase.cpp  messengerbase.h
messenger/src/server/: CMakeLists.txt  main.cpp  postgres.conf  server.cc  server.cpp  server.h  utilities.cpp  utilities.h
